@@ -1,3 +1,7 @@
+2015-06-18  Mark Wielaard  <mjw@redhat.com>
+
+	* nlist.c (nlist): Check symscn shdr exists before use.
+
 2015-06-16  Mark Wielaard  <mjw@redhat.com>
 
 	* elf_update.c (write_file): Always also use ftruncate before
